tests/errors/callingnonexisting_T307.pyx
nonexisting(3, with_kw_arg=4)

_ERRORS = u"""
1:11: undeclared name not builtin: nonexisting
"""
